clean up the code removed overflow: auto; from the list css to avoid conflicts

--- a/assets/css/the-loop.css
+++ b/assets/css/the-loop.css
@@ -5,7 +5,6 @@ ul.buddyforms-list{
 
 ul.buddyforms-list li {
 	padding: 20px 0;
-	overflow: auto;
 	height: auto;
 	min-height: 44px;
 	position: relative;
